# chatbot-server

./: .env.example  .flaskenv  .gitignore  DESIGN.md  Dockerfile  Pipfile  README.md  a.py  bootstrap  docker-compose.yml  gunicorn.conf.py  main.py  pack.bash  pyproject.toml  requirements.txt  s_c.py  setup.py  socketio_c.py  websocket_c.py
app/: __init__.py  __main__.py  config.py  feishu_bot.py  lrucache.py  openai_api.py  openai_helper.py  telegram_bot.py
app/api/: __init__.py  chat.py  passport.py  ping.py  user.py  wx_auth.py
app/storage/: __init__.py  user.py
app/util/: login_helper.py
instance/: app.sqlite  dev_config.cfg  prod_config.py  test_config.cfg
src/app/: __init__.py  openai_helper.py  telegram_bot.py  usage_tracker.py
src/app/api/: __init__.py  chat.py  passport.py  user.py
src/app/form/: user.py
src/app/storage/: user.py
src/app/util/: l.py
tests/: test_flask_mongodb.py  test_mongodb.py
