[tool.poetry]
name = "chatbot-server"
version = "1.0.0"
description = ""
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
sentry-sdk = "*"
flask-restful = "*"
flask-login = "*"
gitpython = "*"
flask-sqlalchemy = "*"
sqlalchemy = "*"
flask-wtf = "*"
wtforms = "*"
redis = "*"
email-validator = "*"
flask-mail = "*"
pillow = "*"
influxdb-client = "*"
apscheduler = "*"
openai = "*"
requests = "*"
pysocks = "*"
python-telegram-bot = "*"
tiktoken = "*"
pydub = "*"
flask-pymongo = "*"
coloredlogs = "*"
python-dotenv = "*"
gunicorn = "*"
websockets = "^11.0.1"
flask-socketio = "^5.3.3"
python-socketio = "^5.8.0"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
