[tool.poetry]
name = "chatbot-server"
version = "1.0.0"
description = ""
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
#[[tool.poetry.source]]
#name = "tsinghua"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#default = false
#secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
sentry-sdk = "1.19.1"
flask-restful = "0.3.9"
flask-login = "0.6.2"
gitpython = "3.1.31"
flask-sqlalchemy = "3.0.3"
sqlalchemy = "2.0.9"
flask-wtf = "1.1.1"
wtforms = "3.0.1"
redis = "4.5.4"
email-validator = "1.3.1"
flask-mail = "0.9.1"
pillow = "9.5.0"
influxdb-client = "1.36.1"
apscheduler = "3.10.1"
openai = "0.27.4"
requests = "2.28.2"
pysocks = "1.7.1"
python-telegram-bot = "20.2"
pydub = "0.25.1"
flask-pymongo = "2.3.0"
coloredlogs = "15.0.1"
python-dotenv = "1.0.0"
flask-sock = "^0.6.0"
gunicorn = "20.1.0"
tiktoken = "^0.5.2"



